--- a/src/AdventOfCode2016/AdventOfCode2016.csproj
+++ b/src/AdventOfCode2016/AdventOfCode2016.csproj
@@ -1,19 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <RootNamespace>AdventOfCode2016</RootNamespace>
-    <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>AdventOfCode2016</AssemblyName>
-    <Product>AdventOfCode2020</Product>
-    <Copyright>Copyright © 2020</Copyright>
-    <Company />
-    <PackageId>AdventOfCode2016</PackageId>
-    <Description />
-    <Authors />
-    <Version>0.0.0.0-local</Version>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <FileVersion>0.0.0.0</FileVersion>
-    <OutputPath>bin\$(Configuration)\</OutputPath>
+    <TargetFramework>net6.0</TargetFramework>  
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Data\**" />
@@ -22,7 +10,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="paket.references" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8" />
+    <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="NUnit" Version="3.12" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
